<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blue"
    android:backgroundTint="@color/blue"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="60dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iv_background"
        android:src="@drawable/stars">
    </ImageView>


    <ImageView
        android:id="@+id/iv_background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/iv_tree_red"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="210dp"
        android:layout_marginTop="200dp"
        app:layout_constraintTop_toTopOf="parent">
    </ImageView>

    <ImageView
        android:id="@+id/iv_deer"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginEnd="200dp"
        android:layout_marginTop="72dp"
        android:src="@drawable/deer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/fire"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp">
    </ImageView>

    <ScrollView
        android:id="@+id/src_log"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toBottomOf="@id/iv_deer"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="160dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/re_log"
                android:layout_width="match_parent"
                android:background="@drawable/bg_login"
                android:backgroundTint="@color/white"
                android:layout_height="420dp">

                <ImageView
                    android:id="@+id/iv_shield"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:src="@drawable/shield"
                    android:layout_marginTop="20dp"
                    android:layout_marginStart="20dp">
                </ImageView>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/scanner"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentEnd="true"
                    android:layout_marginTop="140dp"
                    app:civ_circle_background_color="#7A3D5AFE"
                    android:cropToPadding="true"
                    android:layout_marginEnd="20dp">
                </de.hdodenhof.circleimageview.CircleImageView>


                <TextView
                    android:id="@+id/tv_begin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/begin"
                    android:textStyle="bold"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/iv_shield"
                    android:layout_marginStart="20dp"
                    android:paddingVertical="8dp"
                    android:textSize="20sp"
                    android:textColor="@color/white">
                </TextView>


                <TextView
                    android:id="@+id/tv_user_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_name"
                    android:textColor="@color/white"
                    android:textSize="35sp"
                    android:textStyle="normal"
                    android:layout_below="@id/tv_begin"
                    android:layout_marginStart="20dp">
                </TextView>


                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/tv_user_name"
                    android:autofillHints="password"
                    android:inputType="textPassword"
                    android:layout_margin="20dp"
                    android:hint="@string/hin_pass"
                    android:textColor="@color/white"
                    android:textColorHint="@color/white"
                    android:backgroundTint="#BDBDBD">
                </EditText>

                <LinearLayout
                    android:id="@+id/linear_option"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/edt_password"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/another_acc"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:inputType="text"
                        android:paddingVertical="15dp"
                        android:text="@string/another_account"
                        android:textColor="@color/white"
                        android:textSize="15sp"
                        android:textStyle="bold"
                        tools:ignore="TextViewEdits" />

                    <TextView
                        android:id="@+id/fogot_pass"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:text="@string/fogot_pass"
                        android:layout_weight="1"
                        android:inputType="text"
                        android:textColor = "@color/white"
                        android:gravity="end"
                        android:textStyle="bold"
                        android:paddingVertical="15dp"
                        android:textSize="15sp"
                        tools:ignore="TextViewEdits" />

                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/linear_option"
                    android:text="@string/login"
                    android:textColor="@color/blue"
                    android:textSize="20sp"
                    android:background="@drawable/bg_btn"
                    android:textStyle="bold"
                    android:layout_marginTop="15dp"
                    android:layout_alignParentBottom="true"
                    android:gravity="center">
                </TextView>
            </RelativeLayout>

            <LinearLayout
                android:id="@+id/linear_option_another"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                android:layout_below="@id/re_log"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/scanner_qr"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/qr"
                        android:layout_marginStart="10dp">
                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/scanner_qr"
                        android:textSize="13sp"
                        android:textStyle="bold"
                        android:textColor="@color/white">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/otp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/otp"
                        android:layout_marginStart="30dp">
                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/OTP"
                        android:textSize="13sp"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold">
                    </TextView>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/nfc"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/nfc">
                    </ImageView>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/NFC"
                        android:textStyle="bold"
                        android:textSize="13sp"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/white">
                    </TextView>
                </LinearLayout>


            </LinearLayout>


            <LinearLayout
                android:id="@+id/up_arrow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_option_another"
                android:gravity="center"
                android:layout_marginTop="20dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="28dp"
                    android:layout_height="24dp"
                    android:src="@drawable/up_arrow">
                </ImageView>

            </LinearLayout>


        </RelativeLayout>

    </ScrollView>








</androidx.constraintlayout.widget.ConstraintLayout>